# msp430-linux

./: .gitignore  README.md
cmake/: driverlib.CMakeLists.cmake  msp430.cmake
exa/cmake/: .CMakeLists.txt.swp  .gpio_ex1_outputHiMINE.mk.swp  .links.txt.kate-swp  CMakeLists.txt  clean.sh  gpio_ex1_outputHiMINE.mk  links.txt  msp430.cmake
exa/cmake/src/: main.c
setup/: install.sh
